--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 
 .poster {
-  width: 150px; /* Set a fixed width for the poster or adjust as needed */
+  width: 150px; /* Set a fixed width for the poster */
   height: auto; /* Maintain aspect ratio */
   margin-right: 20px; /* Add some spacing between the poster and details */
 }
@@ -25,7 +25,7 @@
 }
 
 .movie-details span {
-  font-weight: bold; /* Make the rating text bold or adjust as needed */
+  font-weight: bold; /* Make the rating text bold*/
 }
 /* App.css */
 
@@ -127,5 +127,64 @@
   flex-direction: column;
   align-items: center;
   gap: 20px; /* Space between the elements */
-  margin-top: 20px; /* Optional: Add some margin at the top */
+  margin-top: 20px; 
 }
+.homepage-container {
+  background-color: skyblue;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 78vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.movie-container {
+  display: flex;
+  justify-content: center; /* Center the content horizontally */
+  align-items: center; /* Center the content vertically */
+  height: 100vh;   
+}
+.movie-content {
+  display: flex;
+  justify-content: space-between; /* Distribute the items along the main axis */
+  align-items: center;
+  width: 80%;  
+}
+.button-link {
+  display: inline-block;
+  padding: 10px 20px;
+  margin-top: 20px;
+  background-color: #007bff; /* Button background color */
+  color: #ffffff; /* Text color */
+  text-decoration: none;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+
+  /* Optional: Hover styles */
+  &:hover {
+    background-color: #0056b3; /* Darker background color on hover */
+  }
+}
+@keyframes typing {
+  from { width: 0; }
+  to { width: 100%; }
+}
+
+.typewriter-text {
+  overflow: hidden; /* Ensures the text is not visible outside the div */
+  white-space: nowrap; /* Prevents wrapping to the next line */
+  animation: typing 3s steps(50, end); 
+  border-right: 1px solid; /* Creates the blinking cursor effect */
+  margin: 0 auto; /* Centers the text horizontally */
+  font-size: 35px;
+  color: black;
+  text-align: center;
+  font-size: 35px;
+  color: #0f0e0e;
+  padding: 25px;
+}
+
+
